添加对输入流程的统一控制，添加首页没填完信息的情况下隐藏tabBar的逻辑

--- a/app.json
+++ b/app.json
@@ -8,8 +8,7 @@
         "pages/real-name/real-name",
         "pages/index/index",
         "pages/mine/mine",
-        "pages/matched/matched",
-        "pages/logs/logs"
+        "pages/matched/matched"
     ],
     "window": {
         "backgroundTextStyle": "light",
