--- a/app.json
+++ b/app.json
@@ -28,16 +28,16 @@
                 "text": "首页"
             },
             {
+                "pagePath": "pages/matched/matched",
+                "iconPath": "images/us.png",
+                "selectedIconPath": "images/us-selected.png",
+                "text": "配对"
+            },
+            {
                 "pagePath": "pages/mine/mine",
                 "iconPath": "images/mine.png",
                 "selectedIconPath": "images/mine-selected.png",
                 "text": "我的"
-            },
-            {
-                "pagePath": "pages/matched/matched",
-                "iconPath": "images/us.png",
-                "selectedIconPath": "images/us-selected.png",
-                "text": "匹配"
             }
         ]
     }
