--- a/app.json
+++ b/app.json
@@ -1,44 +1,47 @@
 {
-    "pages": [
-        "pages/pre-page/pre-page",
-        "pages/login/login",
-        "pages/search-nearby/search-nearby",
-        "pages/personal-info/personal-info",
-        "pages/my-knowledge/my-knowledge",
-        "pages/real-name/real-name",
-        "pages/index/index",
-        "pages/mine/mine",
-        "pages/matched/matched"
-    ],
-    "window": {
-        "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#f77738",
-        "navigationBarTitleText": "知识换换",
-        "navigationBarTextStyle": "#fff"
-    },
-    "tabBar": {
-        "backgroundColor": "#fff",
-        "color": "#555",
-        "selectedColor": "#f77738",
-        "borderStyle": "white",
-        "list": [{
-                "pagePath": "pages/index/index",
-                "iconPath": "images/home.png",
-                "selectedIconPath": "images/home-selected.png",
-                "text": "首页"
-            },
-            {
-                "pagePath": "pages/matched/matched",
-                "iconPath": "images/us.png",
-                "selectedIconPath": "images/us-selected.png",
-                "text": "配对"
-            },
-            {
-                "pagePath": "pages/mine/mine",
-                "iconPath": "images/mine.png",
-                "selectedIconPath": "images/mine-selected.png",
-                "text": "我的"
-            }
-        ]
-    }
+  "pages": [
+    "pages/pre-page/pre-page",
+    "pages/login/login",
+    "pages/search-nearby/search-nearby",
+    "pages/personal-info/personal-info",
+    "pages/my-knowledge/my-knowledge",
+    "pages/view-matched/view-matched",
+    "pages/real-name/real-name",
+    "pages/index/index",
+    "pages/mine/mine",
+    "pages/matched/matched",
+    "pages/guide-page/guide-page"
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#f77738",
+    "navigationBarTitleText": "知识换换",
+    "navigationBarTextStyle": "#fff"
+  },
+  "tabBar": {
+    "backgroundColor": "#fff",
+    "color": "#555",
+    "selectedColor": "#f77738",
+    "borderStyle": "white",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home-selected.png",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/matched/matched",
+        "iconPath": "images/us.png",
+        "selectedIconPath": "images/us-selected.png",
+        "text": "配对"
+      },
+      {
+        "pagePath": "pages/mine/mine",
+        "iconPath": "images/mine.png",
+        "selectedIconPath": "images/mine-selected.png",
+        "text": "我的"
+      }
+    ]
+  }
 }
