重构跳转逻辑，提取公共函数

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#f77738",
-    "navigationBarTitleText": "知识换换",
+    "navigationBarTitleText": "知交",
     "navigationBarTextStyle": "#fff"
   },
   "tabBar": {
