--- a/app.json
+++ b/app.json
@@ -23,26 +23,26 @@
   },
   "tabBar": {
     "backgroundColor": "#fff",
-    "color": "#555",
-    "selectedColor": "#f77738",
+    "color": "#CDCDCD",
+    "selectedColor": "#EE7237",
     "borderStyle": "white",
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "images/home.png",
-        "selectedIconPath": "images/home-selected.png",
+        "iconPath": "images/shouye3.png",
+        "selectedIconPath": "images/shouye4.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/matched/matched",
-        "iconPath": "images/us.png",
-        "selectedIconPath": "images/us-selected.png",
+        "iconPath": "images/peidui-2.png",
+        "selectedIconPath": "images/peidui-3.png",
         "text": "配对"
       },
       {
         "pagePath": "pages/mine/mine",
-        "iconPath": "images/mine.png",
-        "selectedIconPath": "images/mine-selected.png",
+        "iconPath": "images/wode.png",
+        "selectedIconPath": "images/wode1.png",
         "text": "我的"
       }
     ]
