--- a/app.json
+++ b/app.json
@@ -2,25 +2,35 @@
   "pages": [
     "pages/pre-page/pre-page",
     "pages/login/login",
+    "pages/nick/nick",
     "pages/career/career",
     "pages/title/title",
-    "pages/nick/nick",
     "pages/search-nearby/search-nearby",
+    "pages/index/index",
     "pages/real-name/real-name",
     "pages/personal-photo/personal-photo",
     "pages/my-knowledge/my-knowledge",
     "pages/view-matched/view-matched",
-    "pages/index/index",
     "pages/mine/mine",
     "pages/matched/matched",
     "pages/guide-page/guide-page"
   ],
+
+ "permission": {
+  "scope.userLocation": {
+    "desc": "你的位置信息将用于小程序位置接口的效果展示"
+  }
+},
+    
+  
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "知交",
     "navigationBarTextStyle": "black"
+
   },
+  
   "tabBar": {
     "backgroundColor": "#fff",
     "color": "#CDCDCD",
@@ -45,6 +55,11 @@
         "selectedIconPath": "images/wode1.png",
         "text": "我的"
       }
+      
     ]
+    
+    
   }
+  
+  
 }
